[package]
name = "waiter"
description = "A simple gridserver."
version = "0.0.1"
edition = "2021"
authors = ["0b11"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
rouille = "3.6.1"
