[package]
name = "waiter"
description = "A simple gridserver."
version = "0.0.1"
edition = "2021"
authors = ["0b11"]

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
hyper = { version = "1.0.0-rc.2", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.2" 
