[package]
name = "waiter"
description = "A simple webserver."
version = "0.0.1"
edition = "2021"
authors = ["0b11"]

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
base64 = "0.13"

